# zstream-cpp

./: Readme.md  izstream.hpp  ozstream.hpp  ozstream_impl.hpp
.github/workflows/: cmake-multi-platform.yml
test/: CMakeLists.txt  Makefile  buffer_test.cpp  input_test.cpp  nocompression_test.cpp  output_test.cpp
test/big_endian/: README.md  build.sh  powerpc_sysroot_setup.sh  run_test.sh
